# Bil142Proje

./: CMakeLists.txt  Event.h  main.cpp
inc/: AsteroidKusagi.h  Event.h  EventGenerator.h  Gemi.h  GemiGenerator.h  GucluGemi.h  HizliGemi.h  NormalGemi.h  TerkedilmisGezegen.h  UzayKorsanlari.h
src/: AsteroidKusagi.cpp  Event.cpp  EventGenerator.cpp  Gemi.cpp  GemiGenerator.cpp  GucluGemi.cpp  HizliGemi.cpp  NormalGemi.cpp  TerkedilmisGezegen.cpp  UzayKorsanlari.cpp
